# notifypw

./: .env-template  .gitignore  Dockerfile  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt  startup.sh
notifypw/: first_alerts.py  main.py
notifypw/data/: scrapers.db
notifypw/schedule/: intervals.py
notifypw/scrapers/: scrape.py
