[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[project]
name = "notifypw"
version = "0.0.2"
authors = [
  { name="Craig Richards", email="craig@greywidget.co.uk" },
]
description = "notifypw"
readme = "README.md"
requires-python = ">=3.11,<3.15"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "beautifulsoup4",
  "keyring",
  "python-decouple",
  "requests",
  "typer",
]
[project.optional-dependencies]
dev = [
  "playwright",
]

[project.urls]
"Homepage" = "https://github.com/greywidget/notifypw"
"Bug Tracker" = "https://github.com/greywidget/dft/issues"

[tool.uv.build-backend]
module-root = ""

[tool.mypy]
python_version = "3.14"
warn_unused_configs = true
disallow_incomplete_defs = true
ignore_missing_imports = true


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
